[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/ui/menus/submenus.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/fonts/menu_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/power.png" type="Texture" id=3]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/information.png" type="Texture" id=4]
[ext_resource path="res://assets/images/kenney_gameicons/PNG/White/2x/right.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/menus/main_menu.gd" type="Script" id=6]
[ext_resource path="res://scenes/ui/components/sure_popup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/components/scroll_text_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/fonts/menu_giant.tres" type="DynamicFont" id=10]
[ext_resource path="res://scenes/ui/menus/options_menu.tscn" type="PackedScene" id=12]

[node name="main_menu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="main_container" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="upper_half" type="VBoxContainer" parent="MarginContainer/main_container"]
margin_right = 1820.0
margin_bottom = 488.0
size_flags_vertical = 3

[node name="options_menu" parent="MarginContainer/main_container/upper_half" instance=ExtResource( 12 )]
margin_left = 1710.0
margin_right = 1820.0
margin_bottom = 110.0

[node name="game_title" type="Label" parent="MarginContainer/main_container/upper_half"]
margin_top = 114.0
margin_right = 1820.0
margin_bottom = 488.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 10 )
text = "GAME_TITLE"
align = 1
valign = 1

[node name="lower_half" type="VBoxContainer" parent="MarginContainer/main_container"]
margin_top = 492.0
margin_right = 1820.0
margin_bottom = 980.0
size_flags_vertical = 3

[node name="buttons" type="VBoxContainer" parent="MarginContainer/main_container/lower_half"]
margin_left = 294.0
margin_right = 1525.0
margin_bottom = 430.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="start" type="Button" parent="MarginContainer/main_container/lower_half/buttons" groups=["button"]]
unique_name_in_owner = true
margin_left = 196.0
margin_right = 1035.0
margin_bottom = 110.0
rect_min_size = Vector2( 660, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "BUTTON_START"
icon = ExtResource( 5 )

[node name="how_to_play" type="Button" parent="MarginContainer/main_container/lower_half/buttons" groups=["button"]]
margin_top = 160.0
margin_right = 1231.0
margin_bottom = 270.0
rect_min_size = Vector2( 660, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "BUTTON_HOW_TO_PLAY"
icon = ExtResource( 4 )

[node name="quit" type="Button" parent="MarginContainer/main_container/lower_half/buttons" groups=["button"]]
margin_left = 230.0
margin_top = 320.0
margin_right = 1001.0
margin_bottom = 430.0
rect_min_size = Vector2( 660, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "BUTTON_EXIT"
icon = ExtResource( 3 )

[node name="scroll_text_dialog" parent="." instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false
text = "LABEL_HOW_TO_PLAY"

[node name="sure_popup" parent="." instance=ExtResource( 8 )]

[node name="submenus" parent="." instance=ExtResource( 1 )]

[connection signal="visibility_changed" from="MarginContainer" to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/main_container/lower_half/buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/main_container/lower_half/buttons/how_to_play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/main_container/lower_half/buttons/quit" to="." method="_on_quit_pressed"]
